--- a/pyconfig.h.in
+++ b/pyconfig.h.in
@@ -1671,6 +1671,9 @@
 /* assume C89 semantics that RETSIGTYPE is always void */
 #undef RETSIGTYPE
 
+/* Define if rl_startup_hook takes arguments */
+#undef RL_STARTUP_HOOK_TAKES_ARGS
+
 /* Define if setpgrp() must be called as setpgrp(0, 0). */
 #undef SETPGRP_HAVE_ARG
 
