--- a/PCbuild/_testcapi.vcxproj.filters
+++ b/PCbuild/_testcapi.vcxproj.filters
@@ -105,7 +105,7 @@
     <ClCompile Include="..\Modules\_testcapi\gc.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\Modules\_testcapi\pyrun.c">
+    <ClCompile Include="..\Modules\_testcapi\run.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
