--- a/Android/testbed/.gitignore
+++ b/Android/testbed/.gitignore
@@ -1,6 +1,11 @@
 # Cancel a rule from the repository's top-level .gitignore file.
 !.idea
 
+# The Gradle wrapper should be downloaded by running `../android.py setup-testbed`.
+/gradlew
+/gradlew.bat
+/gradle/wrapper/gradle-wrapper.jar
+
 *.iml
 .gradle
 /local.properties
