Step 1: replace 'python -Xuops' with 'configure --enable-experimental-tier2'

--- a/configure.ac
+++ b/configure.ac
@@ -1784,6 +1784,19 @@ AC_SUBST([REGEN_JIT_COMMAND])
 AC_SUBST([JIT_STENCILS_H])
 AC_MSG_RESULT([$enable_experimental_jit])
 
+# Check for --enable-experimental-tier2:
+AC_MSG_CHECKING([for --enable-experimental-tier2])
+AC_ARG_ENABLE([experimental-tier2],
+              [AS_HELP_STRING([--enable-experimental-tier2],
+                              [use the experimental tier 2 interpreter (default is no)])],
+              [],
+              [enable_experimental_tier2=no])
+AS_VAR_IF([enable_experimental_tier2],
+          [no],
+          [],
+          [AS_VAR_APPEND([CFLAGS_NODIST], [" -D_Py_TIER2"])])
+AC_MSG_RESULT([$enable_experimental_tier2])
+
 # Enable optimization flags
 AC_SUBST([DEF_MAKE_ALL_RULE])
 AC_SUBST([DEF_MAKE_RULE])
