--- a/configure.ac
+++ b/configure.ac
@@ -1771,9 +1771,9 @@ AC_ARG_ENABLE([experimental-jit],
               [enable_experimental_jit=no])
 case $enable_experimental_jit in
   no) enable_experimental_jit=no ;;
-  yes) enable_experimental_jit="-D_Py_JIT=1 -D_Py_TIER2" ;;
-  yes-default-off) enable_experimental_jit="-D_Py_JIT=3 -D_Py_TIER2" ;;
-  interpreter) enable_experimental_jit="-D_Py_TIER2" ;;
+  yes) enable_experimental_jit="-D_Py_JIT -D_Py_TIER2=1" ;;
+  yes-default-off) enable_experimental_jit="-D_Py_JIT -D_Py_TIER2=3" ;;
+  interpreter) enable_experimental_jit="-D_Py_TIER2=4" ;;
   *) AC_MSG_ERROR(
       [invalid argument: --enable-experimental-jit=$enable_experimental_jit; expected no|yes|yes-default-off|interpreter]) ;;
 esac
