--- a/Misc/stable_abi.toml
+++ b/Misc/stable_abi.toml
@@ -2519,8 +2519,10 @@
     added = '3.13'
 
 [function.Py_TYPE]
+    # Before 3.14, this was a macro that accessed the PyObject member
     added = '3.14'
 [function.Py_REFCNT]
+    # Before 3.14, this was a macro that accessed the PyObject member
     added = '3.14'
 [function.PyIter_NextItem]
     added = '3.14'
@@ -2605,4 +2607,13 @@
 [const.PyABIInfo_GIL]
     added = '3.15'
 [const.PyABIInfo_FREETHREADING_AGNOSTIC]
+    added = '3.15'
+[function.Py_SIZE]
+    # Before 3.15, this was a macro that accessed the PyObject member
+    added = '3.15'
+[function.Py_IS_TYPE]
+    # Before 3.15, this was a macro that accessed the PyObject member
+    added = '3.15'
+[function.Py_SET_SIZE]
+    # Before 3.15, this was a macro that accessed the PyObject member
     added = '3.15'
