--- a/.github/workflows/jit.yml
+++ b/.github/workflows/jit.yml
@@ -113,6 +113,7 @@ jobs:
       - name: macOS
         if: runner.os == 'macOS'
         run: |
+        arch -x86_64 /bin/bash -c '
           brew update
           find /usr/local/bin -lname '*/Library/Frameworks/Python.framework/*' -delete
           brew install llvm@${{ matrix.llvm }}
@@ -124,6 +125,7 @@ jobs:
           ./configure --enable-experimental-jit --enable-universalsdk --with-universal-archs=universal2 ${{ matrix.debug && '--with-pydebug' || '' }}
           make all --jobs 4
           ./python.exe -m test --multiprocess 0 --timeout 4500 --verbose2 --verbose3
+         '
 
       - name: Linux
         if: runner.os == 'Linux'
