--- a/Makefile.pre.in
+++ b/Makefile.pre.in
@@ -2590,6 +2590,7 @@ TESTSUBDIRS=	idlelib/idle_test \
 		test/test_ast \
 		test/test_ast/data \
 		test/archivetestdata \
+		test/audit_test_data \
 		test/audiodata \
 		test/certdata \
 		test/certdata/capath \
