--- a/.github/workflows/add-issue-header.yml
+++ b/.github/workflows/add-issue-header.yml
@@ -1,6 +1,10 @@
 name: Add issue header
 # Automatically edits an issue's descriptions with a header,
 # one of:
+
+# Temporarily disabled for JIT-focused development
+if: false
+
 #
 # - Bug report
 # - Crash report
