--- a/.github/workflows/jit.yml
+++ b/.github/workflows/jit.yml
@@ -39,13 +39,13 @@ jobs:
       fail-fast: false
       matrix:
         target:
-          - i686-pc-windows-msvc/msvc
-          - x86_64-pc-windows-msvc/msvc
-          - aarch64-pc-windows-msvc/msvc
+          # - i686-pc-windows-msvc/msvc
+          # - x86_64-pc-windows-msvc/msvc
+          # - aarch64-pc-windows-msvc/msvc
           - x86_64-apple-darwin/clang
-          - aarch64-apple-darwin/clang
-          - x86_64-unknown-linux-gnu/gcc
-          - aarch64-unknown-linux-gnu/gcc
+          # - aarch64-apple-darwin/clang
+          # - x86_64-unknown-linux-gnu/gcc
+          # - aarch64-unknown-linux-gnu/gcc
         debug:
           - true
           - false
