--- a/.github/workflows/jit.yml
+++ b/.github/workflows/jit.yml
@@ -52,27 +52,27 @@ jobs:
         llvm:
           - 19
         include:
-          - target: i686-pc-windows-msvc/msvc
-            architecture: Win32
-            runner: windows-2022
-          - target: x86_64-pc-windows-msvc/msvc
-            architecture: x64
-            runner: windows-2022
-          - target: aarch64-pc-windows-msvc/msvc
-            architecture: ARM64
-            runner: windows-11-arm
+          # - target: i686-pc-windows-msvc/msvc
+          #   architecture: Win32
+          #   runner: windows-2022
+          # - target: x86_64-pc-windows-msvc/msvc
+          #   architecture: x64
+          #   runner: windows-2022
+          # - target: aarch64-pc-windows-msvc/msvc
+          #   architecture: ARM64
+          #   runner: windows-11-arm
           - target: x86_64-apple-darwin/clang
             architecture: x86_64
             runner: macos-13
-          - target: aarch64-apple-darwin/clang
-            architecture: aarch64
-            runner: macos-14
-          - target: x86_64-unknown-linux-gnu/gcc
-            architecture: x86_64
-            runner: ubuntu-24.04
-          - target: aarch64-unknown-linux-gnu/gcc
-            architecture: aarch64
-            runner: ubuntu-24.04-arm
+          # - target: aarch64-apple-darwin/clang
+          #   architecture: aarch64
+          #   runner: macos-14
+          # - target: x86_64-unknown-linux-gnu/gcc
+          #   architecture: x86_64
+          #   runner: ubuntu-24.04
+          # - target: aarch64-unknown-linux-gnu/gcc
+          #   architecture: aarch64
+          #   runner: ubuntu-24.04-arm
     steps:
       - uses: actions/checkout@v4
         with:
