--- a/.github/workflows/jit.yml
+++ b/.github/workflows/jit.yml
@@ -97,19 +97,17 @@ jobs:
         # also see: rosetta https://github.com/numpy/numpy/pull/29756/files
         if: runner.os == 'macOS'
         run: |
-          arch -x86_64 /bin/bash -c '
-          brew update
-          find /usr/local/bin -lname "*/Library/Frameworks/Python.framework/*" -delete
-          brew install llvm@${{ matrix.llvm }}
+          arch -x86_64 brew update
+          arch -x86_64 find /usr/local/bin -lname "*/Library/Frameworks/Python.framework/*" -delete
+          arch -x86_64 brew install llvm@${{ matrix.llvm }}
           export SDKROOT="$(xcrun --show-sdk-path)"
           # Set MACOSX_DEPLOYMENT_TARGET and -Werror=unguarded-availability to
           # make sure we don't break downstream distributors (like uv):
           export CFLAGS_JIT='-Werror=unguarded-availability'
           export MACOSX_DEPLOYMENT_TARGET=10.15
-          ./configure --enable-experimental-jit --enable-universalsdk --with-universal-archs=universal2 ${{ matrix.debug && '--with-pydebug' || '' }}
-          make all --jobs 4
-          ./python.exe -m test --multiprocess 0 --timeout 4500 --verbose2 --verbose3
-          '
+          arch -x86_64 ./configure --enable-experimental-jit --enable-universalsdk --with-universal-archs=universal2 ${{ matrix.debug && '--with-pydebug' || '' }}
+          arch -x86_64 make all --jobs 4
+          arch -x86_64 ./python.exe -m test --multiprocess 0 --timeout 4500 --verbose2 --verbose3
 
       # - name: Linux
       #   if: runner.os == 'Linux'
