--- a/Makefile.pre.in
+++ b/Makefile.pre.in
@@ -3126,11 +3126,27 @@ JIT_DEPS = \
 		$(srcdir)/Tools/jit/*.py \
 		$(srcdir)/Python/executor_cases.c.h \
 		pyconfig.h
+		
+ifneq ($(filter aarch64-apple-darwin%,$(HOST_GNU_TYPE)),)
+JIT_STENCIL_HEADER := jit_stencils-aarch64-apple-darwin.h
+else ifneq ($(filter x86_64-apple-darwin%,$(HOST_GNU_TYPE)),)
+JIT_STENCIL_HEADER := jit_stencils-x86_64-apple-darwin.h
+else ifeq ($(HOST_GNU_TYPE), aarch64-pc-windows-msvc)
+JIT_STENCIL_HEADER := jit_stencils-aarch64-pc-windows-msvc.h
+else ifeq ($(HOST_GNU_TYPE), i686-pc-windows-msvc)
+JIT_STENCIL_HEADER := jit_stencils-i686-pc-windows-msvc.h
+else ifeq ($(HOST_GNU_TYPE), x86_64-pc-windows-msvc)
+JIT_STENCIL_HEADER := jit_stencils-x86_64-pc-windows-msvc.h
+else ifneq ($(filter aarch64-%-linux-gnu,$(HOST_GNU_TYPE)),)
+JIT_STENCIL_HEADER := jit_stencils-$(HOST_GNU_TYPE).h
+else ifneq ($(filter x86_64-%-linux-gnu,$(HOST_GNU_TYPE)),)
+JIT_STENCIL_HEADER := jit_stencils-$(HOST_GNU_TYPE).h
+endif
 
-jit_stencils.h: $(JIT_DEPS)
+jit_stencils.h $(JIT_STENCIL_HEADER): $(JIT_DEPS)
 	@REGEN_JIT_COMMAND@
 
-Python/jit.o: $(srcdir)/Python/jit.c @JIT_STENCILS_H@
+Python/jit.o: $(srcdir)/Python/jit.c jit_stencils.h $(JIT_STENCIL_HEADER)
 	$(CC) -c $(PY_CORE_CFLAGS) -o $@ $<
 
 .PHONY: regen-jit
@@ -3228,7 +3244,7 @@ clean-retain-profile: pycremoval
 	-rm -rf Python/deepfreeze
 	-rm -f Python/frozen_modules/*.h
 	-rm -f Python/frozen_modules/MANIFEST
-	-rm -f jit_stencils.h
+	-rm -f jit_stencils*.h
 	-find build -type f -a ! -name '*.gc??' -exec rm -f {} ';'
 	-rm -f Include/pydtrace_probes.h
 	-rm -f profile-gen-stamp
