--- a/Makefile.pre.in
+++ b/Makefile.pre.in
@@ -3127,24 +3127,9 @@ JIT_DEPS = \
 		$(srcdir)/Python/executor_cases.c.h \
 		pyconfig.h
 
-JIT_STENCIL_HEADER :=
-ifneq ($(filter aarch64-apple-darwin%,$(HOST_GNU_TYPE)),)
-JIT_STENCIL_HEADER = jit_stencils-aarch64-apple-darwin.h
-else ifneq ($(filter x86_64-apple-darwin%,$(HOST_GNU_TYPE)),)
-JIT_STENCIL_HEADER = jit_stencils-x86_64-apple-darwin.h
-else ifeq ($(HOST_GNU_TYPE), aarch64-pc-windows-msvc)
-JIT_STENCIL_HEADER = jit_stencils-aarch64-pc-windows-msvc.h
-else ifeq ($(HOST_GNU_TYPE), i686-pc-windows-msvc)
-JIT_STENCIL_HEADER = jit_stencils-i686-pc-windows-msvc.h
-else ifeq ($(HOST_GNU_TYPE), x86_64-pc-windows-msvc)
-JIT_STENCIL_HEADER = jit_stencils-x86_64-pc-windows-msvc.h
-else ifneq ($(filter aarch64-%-linux-gnu,$(HOST_GNU_TYPE)),)
-JIT_STENCIL_HEADER = jit_stencils-$(HOST_GNU_TYPE).h
-else ifneq ($(filter x86_64-%-linux-gnu,$(HOST_GNU_TYPE)),)
-JIT_STENCIL_HEADER = jit_stencils-$(HOST_GNU_TYPE).h
-endif
+JIT_STENCIL_HEADER := @JIT_STENCIL_HEADER@
 
-ifdef JIT_STENCIL_HEADER
+ifneq ($(JIT_STENCIL_HEADER),)
 jit_stencils.h $(JIT_STENCIL_HEADER): $(JIT_DEPS)
 	@REGEN_JIT_COMMAND@
 
