--- a/configure.ac
+++ b/configure.ac
@@ -2787,11 +2787,13 @@ AS_VAR_IF([jit_flags],
           [AS_VAR_APPEND([CFLAGS_NODIST], [" $jit_flags"])
            AS_VAR_SET([REGEN_JIT_COMMAND],
                       ["\$(PYTHON_FOR_REGEN) \$(srcdir)/Tools/jit/build.py ${ARCH_TRIPLES:-$host} --output-dir . --pyconfig-dir . --cflags=\"$CFLAGS_JIT\""])
+           AS_VAR_SET([JIT_STENCILS_H], ["jit_stencils.h"])
            AS_VAR_IF([Py_DEBUG],
                      [true],
                      [AS_VAR_APPEND([REGEN_JIT_COMMAND], [" --debug"])],
                      [])])
 AC_SUBST([REGEN_JIT_COMMAND])
+AC_SUBST([JIT_STENCILS_H])
 AC_MSG_RESULT([$tier2_flags $jit_flags])
 
 if test "$disable_gil" = "yes" -a "$enable_experimental_jit" != "no"; then
@@ -8171,37 +8173,37 @@ dnl Emscripten does not support shared libraries yet.
 PY_STDLIB_MOD([xxlimited], [test "$TEST_MODULES" = yes], [test "$ac_cv_func_dlopen" = yes])
 PY_STDLIB_MOD([xxlimited_35], [test "$TEST_MODULES" = yes], [test "$ac_cv_func_dlopen" = yes])
 
-# Determine JIT stencil header based on platform
-JIT_STENCIL_HEADER=""
+# Determine JIT stencils header files based on target platform
+JIT_STENCILS_H="jit_stencils.h"
 case "$host" in
-    aarch64-apple-darwin*)
-        JIT_STENCIL_HEADER="jit_stencils-aarch64-apple-darwin.h"
-        ;;
-    x86_64-apple-darwin*)
-        JIT_STENCIL_HEADER="jit_stencils-x86_64-apple-darwin.h"
-        ;;
-    aarch64-pc-windows-msvc)
-        JIT_STENCIL_HEADER="jit_stencils-aarch64-pc-windows-msvc.h"
-        ;;
-    i686-pc-windows-msvc)
-        JIT_STENCIL_HEADER="jit_stencils-i686-pc-windows-msvc.h"
-        ;;
-    x86_64-pc-windows-msvc)
-        JIT_STENCIL_HEADER="jit_stencils-x86_64-pc-windows-msvc.h"
-        ;;
-    aarch64-*-linux-gnu)
-        JIT_STENCIL_HEADER="jit_stencils-$host.h"
-        ;;
-    x86_64-*-linux-gnu)
-        JIT_STENCIL_HEADER="jit_stencils-$host.h"
-        ;;
-    *)
-        # Unsupported platform - leave empty for fallback
-        JIT_STENCIL_HEADER=""
-        ;;
+  aarch64-apple-darwin*)
+    JIT_STENCILS_H="jit_stencils.h jit_stencils-aarch64-apple-darwin.h"
+    ;;
+  x86_64-apple-darwin*)
+    JIT_STENCILS_H="jit_stencils.h jit_stencils-x86_64-apple-darwin.h"
+    ;;
+  aarch64-pc-windows-msvc)
+    JIT_STENCILS_H="jit_stencils.h jit_stencils-aarch64-pc-windows-msvc.h"
+    ;;
+  i686-pc-windows-msvc)
+    JIT_STENCILS_H="jit_stencils.h jit_stencils-i686-pc-windows-msvc.h"
+    ;;
+  x86_64-pc-windows-msvc)
+    JIT_STENCILS_H="jit_stencils.h jit_stencils-x86_64-pc-windows-msvc.h"
+    ;;
+  aarch64-*-linux-gnu)
+    JIT_STENCILS_H="jit_stencils.h jit_stencils-$host.h"
+    ;;
+  x86_64-*-linux-gnu)
+    JIT_STENCILS_H="jit_stencils.h jit_stencils-$host.h"
+    ;;
+  *)
+    # Unsupported platform - use generic header only
+    JIT_STENCILS_H="jit_stencils.h"
+    ;;
 esac
 
-AC_SUBST([JIT_STENCIL_HEADER])
+AC_SUBST([JIT_STENCILS_H])
 
 # substitute multiline block, must come after last PY_STDLIB_MOD()
 AC_SUBST([MODULE_BLOCK])
