--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -41,12 +41,8 @@ repos:
       - id: black
         name: Run Black on Tools/jit/
         files: ^Tools/jit/
-
-  - repo: https://github.com/psf/black-pre-commit-mirror
-    rev: 25.9.0
-    hooks:
       - id: black
-        name: Run Black on wasm/wasi/
+        name: Run Black on Tools/wasm/wasi/
         files: ^Tools/wasm/wasi/
 
   - repo: https://github.com/Lucas-C/pre-commit-hooks
